--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ ul {
     display:flex;
     justify-content: center;
     align-items: Center;
+    border-radius: 8px;
 }
 
 /* Section-2 */
@@ -141,6 +142,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .section-2 .text {
